Make a no-wrap for avoiding layout not good.
Former-commit-id: d480eec50ed4b29a2e8a1dc941508a34bb40b5d6

--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -20,3 +20,7 @@
 .user_picture_no_block{  
   //border: 2px solid black;
 }
+
+.visitor .col-md-3 p{
+	white-space: nowrap;
+}
